[dev] 集成 JWT，添加基本工具类；修改 MP 自动注入类名称

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,3 +10,11 @@ spring:
 mybatis-plus:
   global-config:
     banner: off
+    db-config:
+      logic-delete-field: deleted
+      logic-delete-value: 1
+      logic-not-delete-value: 0
+
+logging:
+  level:
+    cn.ikangjia.demo.domain.mapper: debug
