--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
             <version>4.0.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.axet</groupId>
+            <artifactId>kaptcha</artifactId>
+            <version>0.0.9</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
